<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/ajustes_header"
        >

        <ListPreference
            app:title="@string/text_size_title"
            android:entries="@array/text_size_entries"
            android:entryValues="@array/text_size_values"
            android:key="text_size"
            android:defaultValue="text_size"
            app:useSimpleSummaryProvider="true"
            />

        <SwitchPreference
            app:title="@string/wearable_setting_title"
            android:key="wereable"
            android:summaryOn="@string/wearable_setting_summary"/>

        <SwitchPreference
            android:key="keyboard"
            app:title="@string/keyboard_setting_title"/>

        <SwitchPreference
            android:key="voice"
            app:title="@string/voice_setting_title"/>


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/colores_header">

        <ListPreference
            android:title="@string/select_paleta"
            app:key="paleta"
            app:defaultValue="paleta"
            android:entries="@array/paletas_entries"
            android:entryValues="@array/paletas_values"
            app:useSimpleSummaryProvider="true"
            />

    </PreferenceCategory>

</PreferenceScreen>
