<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/estado"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/optemis_logo"
        />

    <Button
        android:id="@+id/qr_button"
        app:layout_constraintTop_toBottomOf="@id/nav"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="H,1:1"
        android:background="@drawable/qr_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/buscar_button"
        app:layout_constraintBottom_toTopOf="@id/localizacion_button"
        android:layout_margin="10dp"
        android:onClick="cameraQR"
        android:contentDescription="@string/qr_btn"
        />

    <Button
        android:id="@+id/buscar_button"
        app:layout_constraintTop_toBottomOf="@id/nav"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/buscar"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/qr_button"
        app:layout_constraintBottom_toTopOf="@id/fav_button"
        android:layout_margin="10dp"
        android:onClick="search"
        android:contentDescription="@string/search_btn"
        />

    <Button
        android:id="@+id/localizacion_button"
        app:layout_constraintTop_toBottomOf="@id/qr_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/location"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/fav_button"
        app:layout_constraintBottom_toTopOf="@id/maleta_button"
        android:layout_margin="10dp"
        android:contentDescription="@string/map_btn"
        android:onClick="maps"
        />

    <Button
        android:id="@+id/fav_button"
        app:layout_constraintTop_toBottomOf="@id/buscar_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/star_of_favorites_outline"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/localizacion_button"
        app:layout_constraintBottom_toTopOf="@id/ajustes_button"
        android:layout_margin="10dp"
        android:contentDescription="@string/fav_btn"
        />

    <Button
        android:id="@+id/maleta_button"
        app:layout_constraintTop_toBottomOf="@id/localizacion_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="H,1:1"
        android:background="@drawable/portfolio"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/ajustes_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"
        android:onClick="cameraSuitcase"
        android:contentDescription="@string/maleta_btn"

        />

    <Button
        android:id="@+id/ajustes_button"
        app:layout_constraintTop_toBottomOf="@id/fav_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ajustes"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/maleta_button"
        android:layout_margin="10dp"
        android:contentDescription="@string/ajustes_btn"
        android:onClick="ajustes"
        />

</androidx.constraintlayout.widget.ConstraintLayout>